# LibreCelik

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPCSC.cmake  FindUUID.cmake
resources/: CMakeLists.txt  idcard.css  idcard.html  idcardIF2020.html  librecelik.qrc  smartcard-id.icns
resources/i18n/: LibreCelik_en.ts  LibreCelik_sr_RS.qm  LibreCelik_sr_RS.ts
scripts/macos/icons/: createIcons.sh
src/: CMakeLists.txt  config.h.in  librecelik.cpp  librecelik.h  librecelik.ui  main.cpp
src/celikapi/: celikapiplus.h  celikapisession.cpp  celikapisession.h  celikapisessionfactory.cpp  celikapisessionfactory.h  celikapiwrapper.cpp  celikapiwrapper.h
src/document/: document.cpp  document.h
src/document/eid/: eid.cpp  eid.h  eid.ui  eidreader.cpp  eidreader.h  eidtextdocument.cpp  eidtextdocument.h
src/smartcard/: smartcardevent.h  smartcardreaderlistener.cpp  smartcardreaderlistener.h  smartcardscanner.cpp  smartcardscanner.h  smartcardwrapper.h
src/utils/: libreceliklog.cpp  libreceliklog.h  printmanager.h  utils.h
test/: CMakeLists.txt  botan_test.cpp  celikapi_test.cpp  configuration_test.cpp  eidreader_test.cpp  eidreader_test.h  hello_test.cpp  uuid_test.cpp
